changed input type email to type text on all pages

--- a/src/templates/partials/brand/_brand.html
+++ b/src/templates/partials/brand/_brand.html
@@ -14,7 +14,7 @@
                             <div class="brand__row form-row">
                                 <div class="brand__col col-sm-6">
                                     <div class="form-group brand__form-group is-error">
-                                        <input type="email" autocomplete="off" class="form-control brand__input input-dark" placeholder="e- mail">
+                                        <input type="text" autocomplete="off" class="form-control brand__input input-dark" placeholder="e- mail">
                                         <span class="error-label">!</span>
                                     </div>
                                 </div>
