--- a/src/templates/partials/forgot-password/_forgot-password.html
+++ b/src/templates/partials/forgot-password/_forgot-password.html
@@ -8,7 +8,7 @@
                     <div class="forgot-password__form login-form">
                         <form>
                             <div class="form-group forgot-password__form-group">
-                                <input type="email" autocomplete="off" class="form-control login__input input-dark" placeholder="e- mail">
+                                <input type="text" autocomplete="off" class="form-control login__input input-dark" placeholder="e- mail">
                             </div>
                             <div class="forgot-password__submit">
                                 <button type="submit" class="btn btn-primary btn-lg btn_xxl width309">Submit</button>
