--- a/src/templates/partials/home/_contacts.html
+++ b/src/templates/partials/home/_contacts.html
@@ -12,7 +12,7 @@
                             <input type="text" autocomplete="off" class="form-control contacts__input input-dark" placeholder="Full Name">
                         </div>
                         <div class="form-group contacts__form-group">
-                            <input type="email" autocomplete="off" class="form-control contacts__input input-dark" placeholder="Enter email">
+                            <input type="text" autocomplete="off" class="form-control contacts__input input-dark" placeholder="Enter email">
                         </div>
                         <div class="form-group contacts__form-group">
                         <textarea class="form-control  contacts__input input-dark" autocomplete="off" rows="3" placeholder="Message"></textarea>
