--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -126,8 +126,9 @@ body
     &:-webkit-autofill:hover,
     &:-webkit-autofill:focus
     &:-webkit-autofill
-        -webkit-text-fill-color: #fff !important
+        -webkit-text-fill-color: $white !important
         background-color: transparent !important
+        box-shadow: inset 0 0 0 1000px $gray-900 !important
     &:focus
         background-color: transparent
         color: $white
