finished adaptive for dashboard page

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -134,3 +134,11 @@ body
         color: $white
         &::placeholder
             font-size: 0
+
+.md-hide
+    +md
+        display: none
+
+.md-show
+    +md
+        display: block
