--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -366,6 +366,8 @@ $h: rem(3px)
         font-weight: 700
         margin-right: rem(20px)
         padding-right: rem(26px)
+        +r(1439)
+            font-size: rem(16px)
     &__icon
         position: absolute
         width: rem(12px)
@@ -382,6 +384,9 @@ $h: rem(3px)
         display: flex
         align-items: center
         justify-content: center
+        +r(1439)
+            width: rem(43px)
+            height: rem(43px)
         img
             display: block
             width: 100%
@@ -428,6 +433,8 @@ $h: rem(3px)
     margin-top: rem(18px)
     position: relative
     cursor: pointer
+    +r(1439)
+        margin-top: rem(14px)
     +md
         margin: rem(0 0 30px)
     &:hover
@@ -451,6 +458,8 @@ $h: rem(3px)
         font-size: rem(17px)
         color: $white
         background-color: transparent
+        +r(1439)
+            font-size: rem(16px)
         &:focus
             outline: none
 
