--- a/src/templates/partials/dashboard/_dashboard.html
+++ b/src/templates/partials/dashboard/_dashboard.html
@@ -5,10 +5,14 @@
         </div>
         <div class="dashboard__body dashboard-body">
             <div class="dashboard__header dashboard-header">
+                <div class="dashboard__switcher md-show">
+                    <button type="button" class="dashboard__switch">{{ mixins.icon("arrow-left") }} back to list</button>
+                </div>
+
                 <h5 class="dashboard__title">Dashboard</h5>
             </div>
             <div class="dashboard__chat chat row no-gutters">
-                <div class="chat__col col-4">
+                <div class="chat__col col-4 chat__selection md-hide">
                     <ul class="chat__list">
                         {% for i in [
                             {
@@ -26,22 +30,24 @@
                                 author: "You"
                             }
                             ] %}
-                        <li class="chat__contact chat-contact">
-                            <div class="row chat-contact__row">
-                                <div class="chat-contact__col col-4">
-                                    <div class="chat-contact__img">
-                                        <img src="./img/{{ i.img }}" alt="avatar">
+                        <li>
+                            <a href="#" class="chat__contact chat-contact">
+                                <div class="row chat-contact__row">
+                                    <div class="chat-contact__col col-4">
+                                        <div class="chat-contact__img">
+                                            <img src="./img/{{ i.img }}" alt="avatar">
+                                        </div>
+                                    </div>
+                                    <div class="chat-contact__col col">
+                                        <div class="chat-contact__title">{{ i.title }}</div>
+                                        <div class="chat-contact__name">{{ i.name }}</div>
+                                        <div class="chat-contact__message">
+                                            <span class="chat-contact__author">{{ i.author }}</span>
+                                            : {{ i.message }}
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="chat-contact__col col">
-                                    <div class="chat-contact__title">{{ i.title }}</div>
-                                    <div class="chat-contact__name">{{ i.name }}</div>
-                                    <div class="chat-contact__message">
-                                        <span class="chat-contact__author">{{ i.author }}</span>
-                                        : {{ i.message }}
-                                    </div>
-                                </div>
-                            </div>
+                            </a>
                         </li>
                         {% endfor %}
                         <!-- <li class="chat__contact">
@@ -49,7 +55,7 @@
                         </li> -->
                     </ul>
                 </div>
-                <div class="chat__col col">
+                <div class="chat__col col chat__field">
                     <div class="chat__top">
                         <h5 class="chat__title">Welcome to Digiwad!</h5>
                         <div class="chat__interlocutor interlocutor">
@@ -62,34 +68,36 @@
                         </div>
                     </div>
                     <div class="chat__body">
-                        <div class="chat__message chat-message">
-                            <div class="chat-message__body">
-                                <p>
-                                        Hey test,<br>
-                                        <br>
-                                        We're thrilled to have you on FameBit. First things first, this is your home page. Think of it as mission control. Once you have launched a campaign we will notify you if you have new proposals and you'll have easy access to chat with any of the content creators you have hired.
-                                </p>
-                                <p>
-                                        Speaking of hiring content creators, it's time to <a href="#" class="chat-message__link">start a new campaign!</a>
-                                </p>
+                        <div class="chat__body-wrap">
+                            <div class="chat__message chat-message">
+                                <div class="chat-message__body">
+                                    <p>
+                                            Hey test,<br>
+                                            <br>
+                                            We're thrilled to have you on FameBit. First things first, this is your home page. Think of it as mission control. Once you have launched a campaign we will notify you if you have new proposals and you'll have easy access to chat with any of the content creators you have hired.
+                                    </p>
+                                    <p>
+                                            Speaking of hiring content creators, it's time to <a href="#" class="chat-message__link">start a new campaign!</a>
+                                    </p>
+                                </div>
+                                <div class="chat-message__img">
+                                    <img src="./img/ghost@2x.jpg" alt="avatar">
+                                </div>
                             </div>
-                            <div class="chat-message__img">
-                                <img src="./img/ghost@2x.jpg" alt="avatar">
-                            </div>
-                        </div>
-                        <div class="chat__message chat-message chat-message_right">
-                            <div class="chat-message__body">
-                                <p>
-                                        Hey test,<br>
-                                        <br>
-                                        We're thrilled to have you on FameBit. First things first, this is your home page. Think of it as mission control. Once you have launched a campaign we will notify you if you have new proposals and you'll have easy access to chat with any of the content creators you have hired.
-                                </p>
-                                <p>
-                                        Speaking of hiring content creators, it's time to <a href="#" class="chat-message__link">start a new campaign!</a>
-                                </p>
-                            </div>
-                            <div class="chat-message__img">
-                                <img src="./img/ghost@2x.jpg" alt="avatar">
+                            <div class="chat__message chat-message chat-message_right">
+                                <div class="chat-message__body">
+                                    <p>
+                                            Hey test,<br>
+                                            <br>
+                                            We're thrilled to have you on FameBit. First things first, this is your home page. Think of it as mission control. Once you have launched a campaign we will notify you if you have new proposals and you'll have easy access to chat with any of the content creators you have hired.
+                                    </p>
+                                    <p>
+                                            Speaking of hiring content creators, it's time to <a href="#" class="chat-message__link">start a new campaign!</a>
+                                    </p>
+                                </div>
+                                <div class="chat-message__img">
+                                    <img src="./img/ghost@2x.jpg" alt="avatar">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -99,6 +107,7 @@
     </div>
     <form class="dialogue-block">
         <div class="dialogue-block__header">
+            <button class="dialogue-block__close">{{ mixins.icon("cross") }}</button>
             <div class="dialogue-block__interlocutor interlocutor">
                 <div class="interlocutor__img dialogue-block__interlocutor-img">
                     <img src="./img/ghost@2x.jpg" alt="avatar">
