finished channel-selection page

--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -403,6 +403,7 @@ $h: rem(3px)
         opacity: 0
         visibility: hidden
         transition: $transition-fade, visibility .15s
+        box-shadow: 0 3px 6px rgba(#000, .16)
         +md
             right: auto
             left: 50%
