--- a/src/sass/components/dashboard/_dashboard.sass
+++ b/src/sass/components/dashboard/_dashboard.sass
@@ -263,7 +263,7 @@
         border-bottom: 1px solid #D5D5D5
     &__close
         background-color: transparent
-        color: $primary
+        color: $gray-900
         &:focus
             outline: none
 
@@ -274,7 +274,7 @@
         height: rem(30px)
     &__body
         height: rem(407px)
-        padding: rem(35px 22px 35px)
+        padding: rem(20px 22px 35px)
         overflow: auto
         +sm
             height: calc(100vh - 111px)
@@ -290,7 +290,7 @@
         border-bottom-left-radius: rem(8px)
         border-bottom-right-radius: rem(8px)
     &__message
-        max-width: rem(345px)
+        max-width: rem(366px)
     &__row
         height: 100%
         align-items: center
@@ -368,7 +368,7 @@
         display: inline-block
         margin-right: rem(21px)
         line-height: 1.44
-        padding: rem(13px 14px 15px)
+        padding: rem(13px 10px 15px 14px)
         border-radius: rem(7px)
         background-color: $gray-400
         p
