--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -2,6 +2,7 @@
 $blue-chat: #0066AA
 // $gray-chat: #F0F0FB
 $gray-text: #9095A4
+$red-bright: #FF0000
     
 body
     position: relative
@@ -10,6 +11,9 @@ body
 .btn-color-white
     color: $white
 .btn
+    &:focus
+        outline: none
+        box-shadow: none
     &_upper
         text-transform: uppercase
     &_bold
@@ -33,6 +37,9 @@ body
         +sm
             font-size: rem(16px)
             padding: rem(10px 25px)
+    &_sm
+        padding: rem(6px 40px)
+        line-height: 1
     
 
 .width173
