--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -5,5 +5,6 @@
 @import influencer/index
 @import brand/index
 @import pop-up-congratulation
-@import dashboard/dashboard
+@import dashboard/index
+@import channel-selection/index
 @import footer
