added compain-details page

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,5 +1,7 @@
 @import ../../node_modules/sass-rem/rem
 @import helpers/all
+@import ../../node_modules/bootstrap-select/sass/variables
+@import ../../node_modules/bootstrap-select/sass/bootstrap-select
 @import bootstrap/bootstrap
 @import generated/sprite-svg
 @import common
