--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -7,4 +7,5 @@
 @import pop-up-congratulation
 @import dashboard/index
 @import channel-selection/index
+@import compain-details/index
 @import footer
