--- a/src/templates/partials/channel-selection/_channel-selection.html
+++ b/src/templates/partials/channel-selection/_channel-selection.html
@@ -54,7 +54,7 @@
                             </label>
                         </li>
                     </ul>
-                    <div class="channel-selection__submit">
+                    <div class="channel-selection__submit compain-submit">
                         <button type="button" class="btn btn-outline-primary btn_bold btn-lg btn_sm">Next {{ mixins.icon("arrow-right") }}</button>
                     </div>
                 </form>
