finished compain-details page

--- a/src/sass/bootstrap/_variables.scss
+++ b/src/sass/bootstrap/_variables.scss
@@ -9,13 +9,13 @@
 //
 
 $white:    #fff !default;
-$gray-100: #f8f9fa !default;
+$gray-100: #F6F6FD !default; //changed MR
 $gray-200: #D5D5D5 !default; //changed MR
 $gray-300: #D8D8D8 !default; //changed MR
 $gray-400: #F0F0FB !default;//changed MR
 $gray-500: #E8E8E8 !default; //changed MR
 $gray-600: #707070 !default; //changed MR
-$gray-700: #495057 !default;
+$gray-700: #717171 !default; //changed MR
 $gray-800: #343a40 !default;
 $gray-900: #191919 !default; //changed MR
 $black:    #000 !default;
