--- a/src/templates/partials/compain-details/_compain-details.html
+++ b/src/templates/partials/compain-details/_compain-details.html
@@ -114,10 +114,7 @@
                                     <div class="input-group compain-details__textarea-wrap">
                                         <label class="compain-details__label input-group__label" for="textarea1">Campaign Details</label>
                                         <div class="compain-details__textarea-field">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text compain-input-text">Campaign Details</span>
-                                            </div>
-                                            <textarea class="compain-details__textarea" id="textarea1" rows="5"></textarea>
+                                            <textarea class="compain-details__textarea" id="textarea1" rows="5" placeholder="Campaign Details"></textarea>
                                         </div>
                                     </div>
                                 </div>
