added caompain-audience page

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -3,6 +3,7 @@ $blue-chat: #0066AA
 // $gray-chat: #F0F0FB
 $gray-text: #9095A4
 $red-bright: #FF0000
+$dark-gray: #777777
     
 body
     position: relative
