--- a/src/sass/components/compain-details/_compain-details.sass
+++ b/src/sass/components/compain-details/_compain-details.sass
@@ -179,6 +179,7 @@
             color: $red
             border-bottom: 1px solid $red
 
+
 .compain-input-text
     padding: rem(0 20px 0 24px)
     background-color: $white
@@ -279,3 +280,10 @@
             box-shadow: none
         .inner
             padding: 0
+
+// .multi-field
+//     min-height: 50px
+//     width: 300px
+//     display: inline-block
+
+
