--- a/src/sass/components/compain-audience/_compain-audience.sass
+++ b/src/sass/components/compain-audience/_compain-audience.sass
@@ -23,35 +23,50 @@
         +sm
             padding: rem(30px 10px)
     &__form
+        display: flex
+        flex-direction: column
+        align-items: center
+    &__form-wrap
         width: 100%
         max-width: rem(1426px)
         margin: 0 auto
-    &__form-wrap
-        display: flex
-        width: 100%
-        flex-direction: column
-        align-items: center
     &__row
         width: 100%
     &__col
+        +md
+            width: 100%
         &:not(:last-child)
             margin-right: rem(74px)
+            +r(1439)
+                margin-right: rem(40px)
     &__title
         font-size: rem(26px)
         color: $primary
         margin-bottom: rem(23px)
+        +r(1439)
+            font-size: rem(24px)
     &__input-group
+        &:not(:last-child)
+            margin-bottom: rem(26px)
         .input-group-prepend
-            min-width: rem(97px)
+            min-width: rem(141px)
             margin-right: rem(38px)
+        .input-group-text
+            background-color: transparent
     &__input-wrap
-        padding: rem(14px 0)
+        padding: rem(14px 10px 14px 0)
         &_radio
-            padding: rem(20px 0)
+            align-items: flex-start
+            padding: 0
+            .input-group-text
+                padding-top: rem(16px)
     &__form-check
         min-width: rem(83px)
+        padding: 0
         &:not(:last-child)
             margin-right: rem(70px)
+            +r(1439)
+                margin-right: rem(20px)
     &__check-input
         position: absolute
         opacity: 0
@@ -63,6 +78,33 @@
                 polyline
                     stroke: $primary
                     stroke-width: rem(2.5px)
+    &__radio
+        font-size: 0
+        padding: 0
+    &__radio-item
+        padding: 0
+        display: inline-block
+        vertical-align: top
+        margin: rem(20px 0 20px)
+        padding-right: 15px
+        min-width: 124px
+    &__creator
+        margin-bottom: rem(80px)
+    &__text
+        font-size: rem(20px)
+        border-bottom: 1px solid $gray-900
+        padding: rem(10px 0)
+        +r(1439)
+            font-size: rem(18px)
+        &:not(:last-child)
+            margin-bottom: rem(28px)
+        span
+            font-family: $font-family-montserrat
+            color: $primary
+            margin-left: rem(40px)
+    &__submit
+        margin-top: rem(210px)
+
             
         
 
@@ -74,6 +116,8 @@
     font-size: rem(20px)
     font-weight: 500
     font-family: $font-family-montserrat
+    +r(1439)
+        font-size: rem(18px)
     &:before
         content: ""
         position: absolute
@@ -82,13 +126,63 @@
         width: rem(20px)
         height: rem(20px)
         border: 2px solid $gray-200
+        +r(1439)
+            top: rem(1px)
 .compain-check-icon
     position: absolute
     top: rem(6px)
     left: rem(3px)
     font-size: rem(11px)
     color: $gray-200
+    +r(1439)
+        top: rem(4px)
     .icon
         width: rem(14px)
         height: rem(11px)
-    
+
+
+.compain-radio
+    &__input
+        &:checked~.compain-radio__label:before
+            border-color: $dark-gray
+            background-color: $primary
+    &__label
+        padding-left: rem(35px)
+        font-size: rem(16px)
+        font-family: $font-family-montserrat
+        width: 100%
+        &:before
+            top: 50%
+            left: 0
+            transform: translateY(-50%)
+            width: rem(20px)
+            height: rem(20px)
+            background-color: $dark-gray
+            border: 1px solid $gray-800
+        &:after
+            display: none
+.multi-field
+    position: relative
+    width: 100%
+    &__input
+        display: inline-block
+        padding: 5px
+        color: #000
+        word-break: break-all
+        &>*
+            position: relative
+            z-index: 1
+        &:empty:before
+            content: attr(placeholder)
+            display: block
+            color: #000
+        &:after
+            position: absolute
+            content: ""
+            right: 0
+            top: 0
+            left: 0
+            bottom: 0
+            cursor: text
+.tag
+    display: inline-block
