--- a/src/templates/partials/influencer/_influencer.html
+++ b/src/templates/partials/influencer/_influencer.html
@@ -1,32 +1,32 @@
-<div class="login influencer">
-    <div class="login-wrap influencer__wrap">
-        <div class="login-inner inner influencer__inner">
-            <h2 class="influencer__title login-title text-center">
+<div class="login registration">
+    <div class="login-wrap registration__wrap">
+        <div class="login-inner inner registration__inner">
+            <h2 class="registration__title login-title text-center">
                 influencer
             </h2>
-            <div class="influencer__content">
-                <div class="influencer__connect-with">
-                    <span class="influencer__text">CONNECT WITH:</span>
-                    <ul class="influencer__list">
-                        <li class="influencer__list-item influencer__list-item_google">{{ mixins.icon("google") }}</li>
-                        <li class="influencer__list-item influencer__list-item_facebook">{{ mixins.icon("facebook") }}</li>
-                        <li class="influencer__list-item influencer__list-item_twitch">{{ mixins.icon("twitch") }}</li>
+            <div class="registration__content">
+                <div class="connect-with">
+                    <span class="connect-with__text">CONNECT WITH:</span>
+                    <ul class="connect-with__list">
+                        <li><a class="connect-with__list-item connect-with__list-item_google" href="#">{{ mixins.icon("google") }}</a></li>
+                        <li><a class="connect-with__list-item connect-with__list-item_facebook" href="#">{{ mixins.icon("facebook") }}</a></li>
+                        <li><a class="connect-with__list-item connect-with__list-item_twitch" href="#">{{ mixins.icon("twitch") }}</a></li>
                     </ul>
                 </div>
-                <div class="influencer__form login-form">
-                    <div class="influencer__error-text error-text text-center">
+                <div class="registration__form login-form">
+                    <div class="registration__error-text error-text text-center">
                         invalid email/password character 
                         <span>!@#$%^&*().,_-+"</span>
                     </div>
                     <form>
-                        <div class="influencer__row form-row">
-                            <div class="influencer__col col-sm-6">
-                                <div class="form-group influencer__form-group is-error">
-                                    <input type="text" autocomplete="off" class="form-control influencer__input input-dark" placeholder="e- mail">
+                        <div class="registration__row form-row">
+                            <div class="registration__col col-sm-6">
+                                <div class="form-group registration__form-group is-error">
+                                    <input type="text" autocomplete="off" class="form-control registration__input input-dark" placeholder="e- mail">
                                     <span class="error-label">!</span>
                                 </div>
                             </div>
-                            <div class="influencer__col col-sm-6">
+                            <div class="registration__col col-sm-6">
                                 <p>
                                     The password must contain:<br>
                                     one uppercase character, one lowercase 
@@ -34,10 +34,10 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="influencer__row form-row">
-                            <div class="influencer__col col-sm-6">
-                                <div class="form-group influencer__form-group">
-                                    <input type="password" autocomplete="off" class="form-control influencer__input input-dark" placeholder="password">
+                        <div class="registration__row form-row">
+                            <div class="registration__col col-sm-6">
+                                <div class="form-group registration__form-group">
+                                    <input type="password" autocomplete="off" class="form-control registration__input input-dark" placeholder="password">
                                     <span class="error-label">!</span>
                                     <div class="password-complexity">
                                         <div class="password-complexity__row row no-gutters">
@@ -60,32 +60,32 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="influencer__col col-sm-6">
-                                <div class="form-group influencer__form-group">
-                                    <input type="password" autocomplete="off" class="form-control influencer__input input-dark" placeholder="repeat password">
+                            <div class="registration__col col-sm-6">
+                                <div class="form-group registration__form-group">
+                                    <input type="password" autocomplete="off" class="form-control registration__input input-dark" placeholder="repeat password">
                                     <span class="error-label">!</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="influencer__row form-row">
-                            <div class="influencer__col col-sm-6">
-                                <div class="form-check influencer__form-check">
-                                    <input class="form-check-input influencer__check-input" type="checkbox" value="" id="check1">
-                                    <label class="form-check-label influencer__check-label" for="check1">
+                        <div class="registration__row form-row">
+                            <div class="registration__col col-sm-6">
+                                <div class="form-check registration__form-check">
+                                    <input class="form-check-input registration__check-input" type="checkbox" value="" id="check1">
+                                    <label class="form-check-label registration__check-label" for="check1">
                                         I have read and agree with <a href="#">Terms of Use</a>
                                     </label>
                                 </div>
                             </div>
-                            <div class="influencer__col col-sm-6">
-                                <div class="form-check influencer__form-check">
-                                    <input class="form-check-input influencer__check-input" type="checkbox" value="" id="check2">
-                                    <label class="form-check-label influencer__check-label" for="check2">
+                            <div class="registration__col col-sm-6">
+                                <div class="form-check registration__form-check">
+                                    <input class="form-check-input registration__check-input" type="checkbox" value="" id="check2">
+                                    <label class="form-check-label registration__check-label" for="check2">
                                         Subscribe me to newsletters
                                     </label>
                                 </div>
                             </div>
                         </div>
-                        <div class="influencer__submit">
+                        <div class="registration__submit">
                             <button type="submit" class="btn btn-primary btn-lg btn_xxl width309">SIGN UP</button>
                         </div>
                     </form>
